[package]
name = "thu-learn-lib"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "cookies", "json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12"
scraper = "0.11"
lazy_static = "1.4.0"

[lib]
path = "src/lib.rs"